; ModuleID = '/home/carl/AnghaBench/mpv/filters/extr_f_output_chain.c_create_video_things.c'
source_filename = "/home/carl/AnghaBench/mpv/filters/extr_f_output_chain.c_create_video_things.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chain = type { i32, i32, i32, i32, %struct.TYPE_4__, %struct.TYPE_3__*, i32 }
%struct.TYPE_4__ = type { i32, %struct.chain* }
%struct.TYPE_3__ = type { %struct.TYPE_4__* }
%struct.mp_user_filter = type { i8*, i32, i32 }

@MP_FRAME_VIDEO = common dso_local global i32 0, align 4
@get_display_fps = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"userdeint\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"autorotate\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.chain*)* @create_video_things to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_video_things(%struct.chain* %0) #0 {
  %2 = alloca %struct.chain*, align 8
  %3 = alloca %struct.mp_user_filter*, align 8
  store %struct.chain* %0, %struct.chain** %2, align 8
  %4 = load i32, i32* @MP_FRAME_VIDEO, align 4
  %5 = load %struct.chain*, %struct.chain** %2, align 8
  %6 = getelementptr inbounds %struct.chain, %struct.chain* %5, i32 0, i32 6
  store i32 %4, i32* %6, align 8
  %7 = load %struct.chain*, %struct.chain** %2, align 8
  %8 = load %struct.chain*, %struct.chain** %2, align 8
  %9 = getelementptr inbounds %struct.chain, %struct.chain* %8, i32 0, i32 4
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 1
  store %struct.chain* %7, %struct.chain** %10, align 8
  %11 = load i32, i32* @get_display_fps, align 4
  %12 = load %struct.chain*, %struct.chain** %2, align 8
  %13 = getelementptr inbounds %struct.chain, %struct.chain* %12, i32 0, i32 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i32 %11, i32* %14, align 8
  %15 = load %struct.chain*, %struct.chain** %2, align 8
  %16 = getelementptr inbounds %struct.chain, %struct.chain* %15, i32 0, i32 4
  %17 = load %struct.chain*, %struct.chain** %2, align 8
  %18 = getelementptr inbounds %struct.chain, %struct.chain* %17, i32 0, i32 5
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %20, align 8
  %21 = load %struct.chain*, %struct.chain** %2, align 8
  %22 = call %struct.mp_user_filter* @create_wrapper_filter(%struct.chain* %21)
  store %struct.mp_user_filter* %22, %struct.mp_user_filter** %3, align 8
  %23 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %24 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %23, i32 0, i32 0
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %24, align 8
  %25 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %26 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @mp_deint_create(i32 %27)
  %29 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %30 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 8
  %31 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %32 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %1
  %36 = call i32 (...) @abort() #3
  unreachable

37:                                               ; preds = %1
  %38 = load %struct.chain*, %struct.chain** %2, align 8
  %39 = load %struct.chain*, %struct.chain** %2, align 8
  %40 = getelementptr inbounds %struct.chain, %struct.chain* %39, i32 0, i32 3
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.chain*, %struct.chain** %2, align 8
  %43 = getelementptr inbounds %struct.chain, %struct.chain* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  %45 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %46 = call i32 @MP_TARRAY_APPEND(%struct.chain* %38, i32 %41, i32 %44, %struct.mp_user_filter* %45)
  %47 = load %struct.chain*, %struct.chain** %2, align 8
  %48 = call %struct.mp_user_filter* @create_wrapper_filter(%struct.chain* %47)
  store %struct.mp_user_filter* %48, %struct.mp_user_filter** %3, align 8
  %49 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %50 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %49, i32 0, i32 0
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8** %50, align 8
  %51 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %52 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %51, i32 0, i32 2
  %53 = load i32, i32* %52, align 4
  %54 = call i32 @mp_autorotate_create(i32 %53)
  %55 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %56 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %55, i32 0, i32 1
  store i32 %54, i32* %56, align 8
  %57 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %58 = getelementptr inbounds %struct.mp_user_filter, %struct.mp_user_filter* %57, i32 0, i32 1
  %59 = load i32, i32* %58, align 8
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %63, label %61

61:                                               ; preds = %37
  %62 = call i32 (...) @abort() #3
  unreachable

63:                                               ; preds = %37
  %64 = load %struct.chain*, %struct.chain** %2, align 8
  %65 = load %struct.chain*, %struct.chain** %2, align 8
  %66 = getelementptr inbounds %struct.chain, %struct.chain* %65, i32 0, i32 1
  %67 = load i32, i32* %66, align 4
  %68 = load %struct.chain*, %struct.chain** %2, align 8
  %69 = getelementptr inbounds %struct.chain, %struct.chain* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 8
  %71 = load %struct.mp_user_filter*, %struct.mp_user_filter** %3, align 8
  %72 = call i32 @MP_TARRAY_APPEND(%struct.chain* %64, i32 %67, i32 %70, %struct.mp_user_filter* %71)
  ret void
}

declare dso_local %struct.mp_user_filter* @create_wrapper_filter(%struct.chain*) #1

declare dso_local i32 @mp_deint_create(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @MP_TARRAY_APPEND(%struct.chain*, i32, i32, %struct.mp_user_filter*) #1

declare dso_local i32 @mp_autorotate_create(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
